<resources>
    <string name="app_name" translatable="false">Art Quiz</string>
    <string name="title">Welcome to Art Quiz!</string>
    <string name="enter_name">Enter your full name</string>
    <string name="question1">Q1. In which city did Romeo and Juliet live?</string>
    <string name="question2">Q2. What is the name of the following painting and its painter?</string>
    <string name="question3">Q3. Who is the composer of the following music?</string>
    <string name="question4">Q4. What is the type of the following dance and in what countries is common? (You may choose more than one answer.)</string>
    <string name="question5">Q5. Who was the original author of Dracula?</string>
    <string name="question6">Q6. What type of food is this?</string>
    <string name="q1_rd1">Paris</string>
    <string name="q1_rd2">Verona</string>
    <string name="q1_rd3">Rome</string>
    <string name="q1_rd4">Vienna</string>
    <string name="q2_rd1">Benois Madonna by Leonardo da Vinci</string>
    <string name="q2_rd2">Madonna and Child with St John and Angels by Michelangelo</string>
    <string name="q2_rd3">The Birth of Venus by Sandro Botticelli</string>
    <string name="q2_rd4">Nativity by Giotto</string>
    <string name="button_play_music">Play Music</string>
    <string name="q3_rd1">Johann Sebastian Bach</string>
    <string name="q3_rd2">Wolfgang Amadeus Mozart</string>
    <string name="q3_rd3">Franz Schubert</string>
    <string name="q3_rd4">Ludwig van Beethoven</string>
    <string name="button_video">Play Video</string>
    <string name="chkbox_hint">\"Note: YouTube app will open to play the video.\"</string>
    <string name="q4_ckbx1">Flamenco - Spain</string>
    <string name="q4_ckbx2">Salsa - Puerto Rico</string>
    <string name="q4_ckbx3">Salsa - Japan</string>
    <string name="q4_ckbx4">Swing - USA</string>
    <string name="q4_ckbx5">Tango - Spain</string>
    <string name="q4_ckbx6">Waltz - France</string>
    <string name="q4_ckbx7">Salsa - Brazil</string>
    <string name="q4_ckbx8">Flamenco - Mexico</string>
    <string name="q5_rd1">Bram Stoker</string>
    <string name="q5_rd2">Stephen King</string>
    <string name="q5_rd3">Joe Hill</string>
    <string name="q5_rd4">Ann Rice</string>
    <string name="q6_rd1">Taco</string>
    <string name="q6_rd2">Meatball</string>
    <string name="q6_rd3">Ice Cream</string>
    <string name="q6_rd4">Cookie</string>
    <string name="cooking_image_description" translatable="false">This image plays a gif that shows ice cream rolls</string>
    <string name="button_score">Score</string>
    <string name="painting_image_description" translatable="false">Painting of The Birth of Venus by Botticelli</string>
    <string name="gradedAnswersExcellent">You are a true art enthusiast, %1$s!\nYou scored %2$d out of 13! Great Job!</string>
    <string name="gradedAnswersGood">Good Job %1$s!\nYou scored %2$d out of 13. Let\'s try again ;)</string>
    <string name="gradedAnswersMedium">OH NO %1$s!\nYou scored %2$d out of 13.\nI know you love art, let\'s do this!</string>
    <string name="gradedAnswersBad">%1$s!\nYou scored %2$d out of 13. That\'s horrible!</string>
</resources>
