<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape">

        <LinearLayout
            android:id="@+id/all_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/padding_16dp"
                android:drawableBottom="@drawable/icon"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_16dp"
                android:background="@drawable/buttonshape"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:paddingEnd="@dimen/padding_16dp"
                android:paddingLeft="@dimen/padding_16dp"
                android:paddingRight="@dimen/padding_16dp"
                android:paddingStart="@dimen/padding_16dp"
                android:textColor="@color/nameEditText"
                android:textColorHint="@color/colorEditTextHint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    style="@style/styleQuestions"
                    android:text="@string/question1" />

                <RadioGroup
                    android:id="@+id/question1Answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question1RadioButton1"
                        style="@style/styleAnswers"
                        android:text="@string/q1_rd1" />

                    <RadioButton
                        android:id="@+id/question1RadioButton2"
                        style="@style/styleAnswers"
                        android:text="@string/q1_rd2" />

                    <RadioButton
                        android:id="@+id/question1RadioButton3"
                        style="@style/styleAnswers"
                        android:text="@string/q1_rd3" />

                    <RadioButton
                        android:id="@+id/question1RadioButton4"
                        style="@style/styleAnswers"
                        android:layout_marginBottom="@dimen/padding_16dp"
                        android:text="@string/q1_rd4" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    style="@style/styleQuestions"
                    android:text="@string/question2" />

                <ImageView
                    style="@style/imageStyle"
                    android:contentDescription="@string/painting_image_description"
                    android:src="@drawable/venus" />

                <RadioGroup
                    android:id="@+id/question2Answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question2RadioButton1"
                        style="@style/styleAnswers"
                        android:text="@string/q2_rd1" />

                    <RadioButton
                        android:id="@+id/question2RadioButton2"
                        style="@style/styleAnswers"
                        android:text="@string/q2_rd2" />

                    <RadioButton
                        android:id="@+id/question2RadioButton3"
                        style="@style/styleAnswers"
                        android:text="@string/q2_rd3" />

                    <RadioButton
                        android:id="@+id/question2RadioButton4"
                        style="@style/styleAnswers"
                        android:layout_marginBottom="@dimen/padding_16dp"
                        android:text="@string/q2_rd4" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    style="@style/styleQuestions"
                    android:text="@string/question3" />

                <Button
                    android:id="@+id/button_music"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/padding_16dp"
                    android:layout_marginLeft="@dimen/padding_16dp"
                    android:layout_marginStart="@dimen/padding_16dp"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="@color/colorShadow"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:text="@string/button_play_music"
                    android:textColor="@color/colorButtonText" />

                <RadioGroup
                    android:id="@+id/question3Answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question3RadioButton1"
                        style="@style/styleAnswers"
                        android:text="@string/q3_rd1" />

                    <RadioButton
                        android:id="@+id/question3RadioButton2"
                        style="@style/styleAnswers"
                        android:text="@string/q3_rd2" />

                    <RadioButton
                        android:id="@+id/question3RadioButton3"
                        style="@style/styleAnswers"
                        android:text="@string/q3_rd3" />

                    <RadioButton
                        android:id="@+id/question3RadioButton4"
                        style="@style/styleAnswers"
                        android:layout_marginBottom="@dimen/padding_16dp"
                        android:text="@string/q3_rd4" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    style="@style/styleQuestions"
                    android:text="@string/question4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_video"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_marginBottom="@dimen/padding_16dp"
                        android:layout_marginLeft="@dimen/padding_16dp"
                        android:layout_marginStart="@dimen/padding_16dp"
                        android:background="@drawable/buttonshape"
                        android:shadowColor="@color/colorShadow"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/button_video"
                        android:textColor="@color/colorButtonText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingEnd="@dimen/padding_16dp"
                        android:paddingLeft="@dimen/padding_16dp"
                        android:paddingRight="@dimen/padding_16dp"
                        android:paddingStart="@dimen/padding_16dp"
                        android:text="@string/chkbox_hint"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/question4CheckBox1"
                            style="@style/checkBoxStyle"
                            android:text="@string/q4_ckbx1" />

                        <CheckBox
                            android:id="@+id/question4CheckBox2"
                            style="@style/checkBoxStyle"
                            android:text="@string/q4_ckbx2" />

                        <CheckBox
                            android:id="@+id/question4CheckBox3"
                            style="@style/checkBoxStyle"
                            android:text="@string/q4_ckbx3" />

                        <CheckBox
                            android:id="@+id/question4CheckBox4"
                            style="@style/checkBoxStyle"
                            android:text="@string/q4_ckbx4" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/question4CheckBox5"
                            style="@style/checkBoxStyle"
                            android:text="@string/q4_ckbx5" />

                        <CheckBox
                            android:id="@+id/question4CheckBox6"
                            style="@style/checkBoxStyle"
                            android:text="@string/q4_ckbx6" />

                        <CheckBox
                            android:id="@+id/question4CheckBox7"
                            style="@style/checkBoxStyle"
                            android:text="@string/q4_ckbx7" />

                        <CheckBox
                            android:id="@+id/question4CheckBox8"
                            style="@style/checkBoxStyle"
                            android:text="@string/q4_ckbx8" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    style="@style/styleQuestions"
                    android:text="@string/question5" />

                <RadioGroup
                    android:id="@+id/question5Answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question5RadioButton1"
                        style="@style/styleAnswers"
                        android:text="@string/q5_rd1" />

                    <RadioButton
                        android:id="@+id/question5RadioButton2"
                        style="@style/styleAnswers"
                        android:text="@string/q5_rd2" />

                    <RadioButton
                        android:id="@+id/question5RadioButton3"
                        style="@style/styleAnswers"
                        android:text="@string/q5_rd3" />

                    <RadioButton
                        android:id="@+id/question5RadioButton4"
                        style="@style/styleAnswers"
                        android:layout_marginBottom="@dimen/padding_16dp"
                        android:text="@string/q5_rd4" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <TextView
                    style="@style/styleQuestions"
                    android:text="@string/question6" />

                <ImageView
                    android:id="@+id/cooking"
                    style="@style/imageStyle"
                    android:contentDescription="@string/cooking_image_description" />

                <RadioGroup
                    android:id="@+id/question6Answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/question6RadioButton1"
                        style="@style/styleAnswers"
                        android:text="@string/q6_rd1" />

                    <RadioButton
                        android:id="@+id/question6RadioButton2"
                        style="@style/styleAnswers"
                        android:text="@string/q6_rd2" />

                    <RadioButton
                        android:id="@+id/question6RadioButton3"
                        style="@style/styleAnswers"
                        android:text="@string/q6_rd3" />

                    <RadioButton
                        android:id="@+id/question6RadioButton4"
                        style="@style/styleAnswers"
                        android:layout_marginBottom="@dimen/padding_16dp"
                        android:text="@string/q6_rd4" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_below="@id/all_questions"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/padding_16dp"
            android:background="@drawable/buttonshape"
            android:onClick="gradeThemAll"
            android:shadowColor="@color/colorShadow"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/button_score"
            android:textColor="@color/colorButtonText" />
    </RelativeLayout>
</ScrollView>